# Vertigo_Search_Assistant

./: README.md  pyproject.toml
vertigo/: __init__.py  config.py  prompts.py
