[project]
name = "vertigo"
version = "0.1.0"
description = ""
authors = [
    {name = "Alessio_Grieco",email = "Alessiogrieco218@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0.0,>=3.10"
dependencies = [
    "chainlit (>=2.4.3,<3.0.0)",
    "openai (>=1.68.2,<2.0.0)",
    "tavily-python (>=0.5.1,<0.6.0)"
]

[tool.poetry]
packages = [{include = "vertigo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
